infra/hubble/hubble-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hubble-ingress
  namespace: kube-system
spec:
  routes:
    - match: Host(`hubble.rooty.dev`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
          - name: authentik
            namespace: authentik
      services:
        - name: hubble-ui
          port: 80
    - match: "Host(`hubble.rooty.dev`) && PathPrefix(`/outpost.goauthentik.io/`)"
      kind: Rule
      priority: 15
      services:
        - kind: Service
          # Or, to use an external Outpost, create an ExternalName service and reference that here.
          # See https://kubernetes.io/docs/concepts/services-networking/service/#externalname
          name: ak-outpost-traefik-outpost
          namespace: authentik
          port: 9000
  tls:
    secretName: rooty-dev-wildcard
